// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordForm Component should match snapshot when new password and confirm new password are not entered 1`] = `
<div>
  <form
    autocomplete="off"
    class="makeStyles-root-241"
  >
    <div
      class="MuiBox-root MuiBox-root-243"
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-new-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-error Mui-error"
          data-shrink="false"
          for="input-new_password"
        >
          New password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="New password"
        >
          <input
            aria-describedby="helptext-new_password"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-321 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-322"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        >
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
            id="helptext-new_password"
          >
            password.validations.required
          </p>
        </div>
      </div>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-confirm-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-error Mui-error"
          data-shrink="false"
          for="input-confirm_new_password"
        >
          Confirm password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="Confirm password"
        >
          <input
            aria-describedby="helptext-confirm_new_password"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-confirm_new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-321 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-322"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        >
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
            id="helptext-confirm_new_password"
          >
            password.validations.required
          </p>
        </div>
      </div>
    </div>
    <div
      data-inverse="true"
    >
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-submit-password"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`ResetPasswordForm Component should match snapshot when new password and confirm new password do not match 1`] = `
<div>
  <form
    autocomplete="off"
    class="makeStyles-root-497"
  >
    <div
      class="MuiBox-root MuiBox-root-499"
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-new-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
          for="input-new_password"
        >
          New password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="New password"
        >
          <input
            aria-describedby="helptext-new_password"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-new_password"
            type="password"
            value="Test@123"
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-577 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-578"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        />
      </div>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-confirm-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
          data-shrink="true"
          for="input-confirm_new_password"
        >
          Confirm password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="Confirm password"
        >
          <input
            aria-describedby="helptext-confirm_new_password"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-confirm_new_password"
            type="password"
            value="Test"
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-577 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-578"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        >
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
            id="helptext-confirm_new_password"
          >
            password.validations.match
          </p>
        </div>
      </div>
    </div>
    <div
      data-inverse="true"
    >
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-submit-password"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`ResetPasswordForm Component should match snapshot when new password is not compliant 1`] = `
<div>
  <form
    autocomplete="off"
    class="makeStyles-root-369"
  >
    <div
      class="MuiBox-root MuiBox-root-371"
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-new-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
          data-shrink="true"
          for="input-new_password"
        >
          New password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="New password"
        >
          <input
            aria-describedby="helptext-new_password"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-new_password"
            type="password"
            value="Test"
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-449 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-450"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        >
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
            id="helptext-new_password"
          >
            password.validations.compliance
          </p>
        </div>
      </div>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-confirm-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-error Mui-error"
          data-shrink="false"
          for="input-confirm_new_password"
        >
          Confirm password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="Confirm password"
        >
          <input
            aria-describedby="helptext-confirm_new_password"
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-confirm_new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-449 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-450"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        >
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
            id="helptext-confirm_new_password"
          >
            password.validations.match
          </p>
        </div>
      </div>
    </div>
    <div
      data-inverse="true"
    >
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-submit-password"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`ResetPasswordForm Component should match the snapshot 1`] = `
<div>
  <form
    autocomplete="off"
    class="makeStyles-root-1"
  >
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-new-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="input-new_password"
        >
          New password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="New password"
        >
          <input
            aria-describedby="helptext-new_password"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-81 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-82"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        />
      </div>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-confirm-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="input-confirm_new_password"
        >
          Confirm password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="Confirm password"
        >
          <input
            aria-describedby="helptext-confirm_new_password"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-confirm_new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-81 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-82"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        />
      </div>
    </div>
    <div
      data-inverse="true"
    >
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-submit-password"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`ResetPasswordForm Component should match the snapshot for first time user 1`] = `
<div>
  <form
    autocomplete="off"
    class="makeStyles-root-121"
  >
    <div
      class="MuiBox-root MuiBox-root-123"
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-new-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="input-new_password"
        >
          New password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="New password"
        >
          <input
            aria-describedby="helptext-new_password"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-201 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-202"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        />
      </div>
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth"
        data-testid="input-confirm-password"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="input-confirm_new_password"
        >
          Confirm password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          label="Confirm password"
        >
          <input
            aria-describedby="helptext-confirm_new_password"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            id="input-confirm_new_password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="toggle-password-display-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <img
                  alt=""
                  data-testid="hide-password-img"
                  src="/static/eye-inactive.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-201 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-202"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          aria-live="polite"
        />
      </div>
    </div>
    <div
      data-inverse="true"
    >
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-submit-password"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Set up
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
